--- a/Папка создателей/Цели.md
+++ b/Папка создателей/Цели.md
@@ -79,4 +79,4 @@
 	- [ ] Полная карта кладбищ
 	- [ ] Климатную
 - [x] Сделать мастерскую
-- [ ] Защитить папку создателей
+- [-] Защитить папку создателей
