--- a/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
+++ b/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
@@ -26,7 +26,7 @@ tags:
 
 Тем не менее есть ситуации, когда можно оправданно использовать несколько приставок в одном предложении:
 1. Стилистический окрас или в художественных целях — когда мы хотим подчеркнуть какой-то временной аспект: **ho**i **ho**fabti **ho**hartalih — я всегда работаю без благодарностей (мы морфологией подчеркнули именно постоянность утверждение)
-2. Сложное предложение — разные части предложения могут иметь разное время. Части сложного предложения мы разделяем запятой #нуженпример
+2. Сложное предложение — разные части предложения могут иметь разное время. Части сложного предложения мы разделяем запятой: losefabto, i
 3. Взаимодействие разных времён между собой — редкий кейс, когда нам нужно описать какую-то взаимосвязь сущностей разного времени: **lo**i **ho**tuhi **mo**iok — **прошлый** я **всегда** создаёт **будущего** меня (дословно: я в прошлом всегда создаю себя в будущем)
 
 Важно: некоторые* слова буквально меняют своё значение в зависимости от времени предложения (см. «hofm» в [[Словарь|словаре]]), однако это не повод добавлять лишние приставки.
