--- a/Персонажи/Алмазмен (Зао) Элитра.md
+++ b/Персонажи/Алмазмен (Зао) Элитра.md
@@ -1,6 +1,7 @@
 ---
 tags:
   - "#доделать"
+  - "#переделать"
 ---
 Алмаз Элитра - [кристалос](кристалосы.md) и важнейшая фигура в истории [[Зэкерис|Зэкериса]]. Настоящее имя - Зао Элитра
 
