--- a/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
+++ b/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
@@ -252,6 +252,31 @@ tags:
 | **hosede**hiktev ronep        | Этот камень пробыл здесь вечность (и продолжает здесь быть вечно) |
 
 ### Мнимое (ve-)
+Мнимое время — сущность или явления гипотетические, они необязательно существуют, но могут. Проще всего понимать это время как слова «возможно», «может быть», «допустим». Примеры:
+
+| Зэкерисский          | Русский                                                               |
+| :------------------- | :-------------------------------------------------------------------- |
+| bvit'o **ve**secih   | возможно он танцует радостно (возможно, если он танцует, то радостно) |
+| jedo **love**kacih   | возможно раньше он разговаривал гневливо                              |
+| **move**tuho uwnok   | возможно он будет делать лодки (научится их мастерить)                |
+| **hove**klico kjibir | возможно он всегда расстраивается из-за неудач                        |
+Обратите внимание, что если мы используем только мнимое время, то предполагаем что-то в простом времени. Соответственно, если нам нужно предположить другой вид времени, мы должны также использовать соответствующий префикс:
+
+| Зэкерисский       | Русский                                                                            |
+| :---------------- | :--------------------------------------------------------------------------------- |
+| o **vese**nitep   | возможно, он сейчас дома                                                           |
+| **eve**lopo ronep | возможно, здесь часто идут дожди                                                   |
+| **lomovede**fabto | возможно, у него всегда получается завершать работу, но сейчас ему что-то помешало |
+Это касается любого времени, но показательным примером станет именно мнимое. Всегда важно учитывать, на какое слово вы ставите логическое ударение, т.е. к какому слову ставите префиксы времени:
+
+| Зэкерисский         | Русский                            | Примечания                                                                                                                                                                                                                                      |
+| :------------------ | :--------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **ve**o rkafa n'yol | возможно **он** неуязвимый мужчина | Акцент на слове "он". Мы не знаем кем он является и поэтому предполагаем, что он **является** кем-то там. После такого предложения можно составить ещё несколько таких же, меняя всё, кроме "veo" — "Возможно, он мужчина. Возможно, он зверь." |
+| o **ve**rkafa n'yol | возможно он **неуязвимый** мужчина | Акцент на слове "неуязвимый". Мы точно знаем, что он мужчина, но мы не знаем, какой он. Мы предполагаем, что он неуязвимый.                                                                                                                     |
+| o rkafa **ve**n'yol | возможно он **мужчина** неуязвимый | Акцент на слове "мужчина". Мы точно знаем, что он неуязвимый, но мы не знаем кто это. Мы предполагаем, что это мужчина.                                                                                                                         |
+| **ve**u n'yol       | возможно **ты** мужчина            | Как и в первом примере, мы не знаем нашего собеседника. Поэтому и предполагаем.                                                                                                                                                                 |
+| u **ve**n'yol       | возможно ты **мужчина**            | Мы знаем нашего собеседника, но мы не знаем, является ли он мужчиной. В некотором контексте и при определённой интонации это может быть формой **оскорбления**: "ты вроде бы мужчина", "ты мужчина по задумке".                                 |
+
 ### Одновременное (re-)
 ### Случайное (gze- и другие)
 
