--- a/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
+++ b/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
@@ -177,7 +177,7 @@ tags:
 ## Вид
 Приставки вида времени указывают на характер времени. Носителю русского эти приставки менее понятны, но их будет легко освоить, если вы знакомы с английским. В зэкерисском языке есть 6 основных видов времени: простое, продолжительное, совершенное, мнимое, одновременное и случайное.
 ### Простое (без приставки)
-Простое время — сущность или явление просто есть. Если это действие, то оно не обязательно происходит прямо сейчас, а просто существует, как факт, мнение, предположение и так далее. В общем, это время без каких-то свойств. Примеры:
+Простое время — сущность или явление просто есть. Если это действие, то оно не обязательно происходит прямо сейчас, а просто существует, как факт, мнение, утверждение и так далее. В общем, это время без каких-то свойств. Примеры:
 
 | Зэкерисский        | Русский                                                                         |
 | :----------------- | :------------------------------------------------------------------------------ |
@@ -278,7 +278,57 @@ tags:
 | u **ve**n'yol       | возможно ты **мужчина**            | Мы знаем нашего собеседника, но мы не знаем, является ли он мужчиной. В некотором контексте и при определённой интонации это может быть формой **оскорбления**: "ты вроде бы мужчина", "ты мужчина по задумке".                                 |
 
 ### Одновременное (re-)
+Одновременное время — сущность или явление существует в одно время с другим. Чаще всего это время используют в сложных предложениях. Может выполнять роль аналогичную русскому союзу "и" между действиями. Примеры:
+
+| Зэкерисский               | Русский                                 | Примечания                                                                                                                                                                                                                                                                                                           |
+| :------------------------ | :-------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| vixi **vese**gibi         | иду и мыслю                             | Я иду и размышляю. Если бы не шёл, то и не размышлял бы                                                                                                                                                                                                                                                              |
+| tuhi uwnok **move**kdafok | я буду делать лодки и вёсла             | Я научусь делать лодки и, разумеется, вёсла тоже. Я не буду делать вёсел, если не буду делать лодок.<br>Здесь можно было обойтись без одновременного времени, если бы акцент поставили бы на слово tuhi (я создаю).<br>В этом примере мы делаем акцент, мол, разумеется я буду делать вёсла, я же буду делать лодки. |
+| revo **vese**tezmo        | солнечно и холодно                      | Светит солнце и (почему-то) всё равно холодно на улице. Здесь мы сделали акцент на том, что, несмотря на солнце, сейчас холодно                                                                                                                                                                                      |
+| lopo **ive**klici         | дожди идут редко, но когда идут — грущу | Если идёт дождь, то я грущу одновременно с этим. Но дожди идут редко и поэтому грущу я тоже редко.                                                                                                                                                                                                                   |
+Чтобы сделать две части сложного предложения одновременными между собой, достаточно указать на одновременное время в одном из них, при этом другие приставки времени указать всё ещё нужно в обеих частях. Примеры:
+
+| Зэкерисский                   | Русский                                   | Примечание                                                                                                                                                                                                                                                                                      |
+| :---------------------------- | :---------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **de**fabti, **vese**fabto!   | я уже закончил работу, а он ещё работает! | Один ещё работает одновременно с тем, как другой уже закончил. Обратите внимание, что тут используется два разных времени, кроме одновременного. С помощью одновременного времени мы связываем части предложения особым смыслом, мол, второй тоже должен был закончить работу, вместе с первым. |
+| **se**vixi, **vese**o nitep   | я иду, пока он дома                       | Я где-то гуляю, в то время как он сидит сейчас дома.                                                                                                                                                                                                                                            |
+| **ve**tixnuy, **ho**rev todo! | живи, пока солнце светит!                 | первая часть - одновременное настоящее время, вторая - простое вечное. Солнце светит всегда (даже если его не видно). Это стилистически окрашенный призыв жить каждый миг своей жизни.                                                                                                          |
+Но если вам нужно подчеркнуть равноправную одновременность, когда явления не зависят друг от друга и не превосходят одно другого, — можно использовать одновременное время в обеих частях: **vese**revo, **vese**sito — солнце светит, река течёт (описание природы вокруг с указанием на то, что всё происходит одновременно, но независимо)
 ### Случайное (gze- и другие)
+Случайное время — сущность или явление имеет периодичный вероятностный характер. То есть, это как слова "редко", "часто", "иногда" и т.д. Для разных степеней вероятности есть разные приставки:
+
+| **Число вероятности** | **Название**            | **Прошедшее** | **Настоящее** | **Будущее** | **Вечное** |
+| --------------------- | :---------------------- | :------------ | :------------ | :---------- | :--------- |
+| 90%                   | Почти постоянно         | loje-         | je-           | moje-       | hoje-      |
+| 80%                   | Часто*                  | le-           | e-            | me-         | he-        |
+| 60%                   | Обычно                  | loke-         | ke-           | moke-       | hoke-      |
+| 50%                   | Равновероятная частота* | lu-           | u-            | mu-         | hu-        |
+| 40%                   | Не очень часто          | lowe-         | we-           | mowe-       | howe-      |
+| 20%                   | Иногда                  | lone-         | ne-           | mone-       | hone-      |
+| 10%                   | Редко*                  | li-           | i-            | mi-         | hi-        |
+| ??%                   | Непредсказуемая частота | logze-        | gze-          | mogze-      | hogze-     |
+\*В этой статье **Частую**, **Равновероятную** и **Редкую** вероятности мы будем называть **примитивными**. 
+
+Обратите внимание, что **примитивные** вероятности изменяют приставки времени, а не отображаются своей (кроме настоящего времени).
+Примеры:
+
+| Зэкерисский        | Русский                                                                                        |
+| :----------------- | :--------------------------------------------------------------------------------------------- |
+| bvit'i **je**secih | я **почти всегда** танцую радостно                                                             |
+| jedi **le**kacih   | я раньше **часто** разговаривал гневливо                                                       |
+| **mone**tuhi uwnok | я буду **иногда** делать лодки                                                                 |
+| **hi**klico kjibir | он всегда редко расстраивается из-за неудач (мы никогда не видели, чтобы это происходило чаще) |
+Отдельно стоит рассмотреть **Непредсказуемую** вероятность. Непредсказуемая вероятность это та, которая нам неизвестна. Например, если мы слишком мало были свидетелем явления (недостаточно статистики, чтобы оценить вероятность). Либо, это непостоянная вероятность — сегодня редко, завтра часто, через неделю никогда и так далее. Примеры:
+
+| Зэкерисский           | Русский                                | Примечания                                                                               |
+| --------------------- | -------------------------------------- | ---------------------------------------------------------------------------------------- |
+| **gze**o!             | Он непредсказуем!                      | Мы не знаем что, когда и с какой частотой он будет делать                                |
+| bizlosev **gze**m'ato | Этот шпион врёт с неизвестной частотой | Шпион определённо врёт, но определить когда он говорит ложь, а когда правду — невозможно |
+Комбинировать разные вероятности между собой нельзя. Но есть **исключение**: можно комбинировать **примитивные** вероятности с одной **непримитивной** вероятностью. В таких случаях:
+- Примитивная вероятность указывает на частоту определённого явления.
+- Непримитивная вероятность указывает на внутреннюю частоту явления.
+
+Например, если у нас есть два мешка, в одном из них есть много красных шариков и немного синих, а в другом — только красные. Если нам неизвестно какой мешок где, то, можно сказать, у нас есть **une**шанс вытащить синий шарик — с шансом 50/50 мы выберем нужный мешок и с каким-то малым шансом вытащим из него синий шарик. Более конкретный пример: **ene**fabto — **часто** бывают такие периоды, когда ты лишь **иногда** работаешь.
 
 # Словообразующие суффиксы
 ### Исполнитель действия (-os-)
