--- a/Места/Зэкерис.md
+++ b/Места/Зэкерис.md
@@ -2,4 +2,47 @@
 tags:
   - доделать
 ---
-Главный из [двух](Вопрос%20о%20континентах.md) континентов альтернативной Земли. Вся [[История человечества|история человечества]] начинается именно там.
+Главный из [двух](Вопрос%20о%20континентах.md) континентов альтернативной Земли. Вся история человечества начинается именно здесь.
+
+# Города
+На протяжении всей основной истории, на Зэкерисе не было государств как таковых. Однако были полу-самостоятельные города. Большую часть времени все города Зэкериса управлялись центральной властью в столице — [Эренберге](Эренберг). Управление осуществлялось через глав городов — у каждого города был управляющий (глава), который подчинялся напрямую Правителю Зэкериса.
+Во время эпохи изоляции (подробнее ниже) города были разделены и отрезаны друг от друга, из-за чего прежний порядок был развален. Бывшие главы городов установили собственные порядки и формы правления.
+
+Каждый город имеет свою главную специализацию и идеологию, которая часто была связана со специализацией.
+Специализация значит, что город в основном занимается одним родом деятельности — добывает пищу, создаёт искусство, мастерит мебель, развивает науку и так далее. Конечно, в каждом городе были люди разных профессий, но профиль всегда смещался на конкретный род занятий.
+Идеология это не вера и не религия. Это образ жизни и мнение о том, как лично вам лучше живётся. Как правило, идеологии не навязываются, но всё же у каждого города есть преобладающая идеология — связано это с низкой широтой выбора идеологии в детстве жителей каждого города. Часто, именно идеология и поддерживает специальность города.
+
+Вокруг многих городов есть деревни — часто нейтральные по идеологии и специальности поселения. Жители деревень имеют наибольший выбор идеологий, но часто по этой же причине могут разъезжаться по разным городам, когда для этого есть возможности. Во время эпохи изоляции многие деревни стали активно производить еду, чтобы прокормить себя и, в последствии, голодающие города, которые больше не смогли полагаться на объединённое устройство мира.
+
+Вокруг почти каждого города есть кладбищенское кольцо. О них будет расписано подробнее ниже.
+
+# Экс-пи
+Основное и самое главное отличие Зэкериса от нашей вселенной. В мире Зэкериса существует фундаментальная квантовая частица экс-пи.
+Экс-пи может иметь любые свойства. Совершенно любые. Даже очень сложные, например движение с траекторией, напоминающую машину, с поглощением окружающей температуры. При этом в норме одна частица экс-пи всегда сохраняет свои свойства неизменными — она не может случайно их изменить, если такая способность не является частью её же свойств.
+В природе существуют *чистые* частицы экс-пи, которые не обладают свойствами, но они сразу их обретают, когда получают импульс. При обретении свойств, частица получит совершенно случайные свойства, предсказать или повлиять на будущие свойства невозможно (если в нашем распоряжении нет частиц экс-пи с таким свойством — влиять на другие частицы экс-пи).
+Часто чистое экс-пи удерживается в чистом состоянии за счёт других частиц экс-пи со свойствами.
+
+Беспорядочное множество малозаметных экс-пи с незначительными свойствами наполняет всю вселенную, в том числе и Зэкерис. Такое безвредное экс-пи называется *природным*.
+
+Живые существа Зэкериса с нервной системой имеют в этой системе *нервное экс-пи*, которое служит для улучшения обработки разной информации, а также для получения и управления способностями. Нервное экс-пи передаётся от матери к ребёнку. В редких случаях эта передача не происходит, тогда ребёнок рождается **изэктиком** — человеком без нервного экс-пи.
+
+По всему Зэкерису распределены **хранилища чистого экс-пи** — это камни, породы, кристаллы и прочие минералы, в которых заключены **[[Ядро|ядра экс-пи]]**. Вкратце про ядра:
+- В них заключено немного чистого экс-пи
+- Их, как правило, нельзя обнаружить или заметить
+- Если *активировать* ядро, **не-изэктик** может получить способности и стать **[[Кристалосы|кристалосом]]**.
+- Также, если активация происходит без участия не-изэктика, экс-пи может наделить любой объект особыми свойствами — такой объект станет **артефактом**.
+- Для *активации* ядра нужно выполнить неизвестные заранее условия — поместить хранилище в определённые условия, что-то с ним сделать, выполнить какой-то порядок действия.
+- Условия зависят от конкретного хранилища, но узнать их заранее невозможно и они могут быть совершенно любыми.
+- Если разрушить или иначе повредить структуру ядра, чистое экс-пи будет *освобождено* (если это не условие для активации)
+- Освобождённое экс-пи **не дарует** способностей и может создать *аномалии*.
+
+Кристалосы — это счастливчики, которые случайно получили способности, активировав ядро (это почти никогда не происходит умышлено). Способности привязываются к нервному экс-пи кристалоса, поэтому он может их контролировать. По этой же причине **изэктик не может стать кристалосом**, но может стать живым артефактом (обычно это очень трагичные истории).
+Вкратце про кристалосов:
+- Их способности — это сложные алгоритмы из экс-пи, которые создают сложные манипуляции с окружающим миром или с самим кристалосом
+- Технически кристалос может иметь любые способности **кроме дара предвидения** — логика Зэкериса исключает возможность такой способности.
+- Сила и мощность способностей **неизменны** — кристалос может стать сильнее только за счёт **опыта использования** силы и за счёт более **глубокого понимания** того, как именно его сила работает (что изначально никогда не известно и почти всегда остаётся загадкой)
+- После смерти кристалоса, его способности продолжают существовать и действовать бесконтрольно — такие явления называются **призраками**.
+
+Аномалии — это скопления заметного экс-пи, которые создают какое-то явление. Например, на Зэкерисе есть летающий остров — это результат работы аномалии, которая создаёт мощные ветра под островом, достаточно сильные для его удержания в воздухе. Чаще всего аномалии возникают из-за освобождения чистого экс-пи из ядер.
+
+Призраки — это аномалии, оставленные после смерти кристалоса. Часто призрак привязан к телу кристалоса, чьей способностью призрак был. После полного разложения, призрак может быть привязан к точке в пространстве, которая имеет инерцию и подвержена воздействию гравитации. В сумме это значит, что призрак останется на месте разложения, но могут быть исключения. 
