--- a/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
+++ b/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
@@ -331,7 +331,12 @@ tags:
 Например, если у нас есть два мешка, в одном из них есть много красных шариков и немного синих, а в другом — только красные. Если нам неизвестно какой мешок где, то, можно сказать, у нас есть **une**шанс вытащить синий шарик — с шансом 50/50 мы выберем нужный мешок и с каким-то малым шансом вытащим из него синий шарик. Более конкретный пример: **ene**fabto — **часто** бывают такие периоды, когда ты лишь **иногда** работаешь.
 
 # Словообразующие суффиксы
+
+Некоторые существительные образуются от других, что связано с необходимостью быстро донести смысл слова, не объясняя его суть. Для таких целей есть несколько словообразующих суффиксов.
+
+Используя словообразующий суффикс, мы создаём новое отдельное слово, которое подчиняется всем правилам языка как и другие. В том же числе, можно добавить новый словообразующий суффикс. Однако чем больше суффиксов будет использовано, тем меньше смысла можно уловить в слове.
 ### Исполнитель действия (-os-)
+
 ### Учение (-un-)
 ### Идеология (-ats-)
 ### Цвет (-ses-)
