--- a/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
+++ b/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
@@ -335,14 +335,78 @@ tags:
 Некоторые существительные образуются от других, что связано с необходимостью быстро донести смысл слова, не объясняя его суть. Для таких целей есть несколько словообразующих суффиксов.
 
 Используя словообразующий суффикс, мы создаём новое отдельное слово, которое подчиняется всем правилам языка как и другие. В том же числе, можно добавить новый словообразующий суффикс. Однако чем больше суффиксов будет использовано, тем меньше смысла можно уловить в слове.
-### Исполнитель действия (-os-)
 
+Далеко не все производные слова имеют установленное значение, однако с должным контекстом можно будет понять, что вы имеете ввиду.
+
+Словообразующий суффикс можно подставлять к существительным и к эмоциям.
+### Исполнитель действия (-os-)
+Исполнитель связанного действия, работник профессии или обладатель способности что-либо делать. Примеры:
+
+| Зэкерисский       | Русский                                           |
+| :---------------- | :------------------------------------------------ |
+| nox' — nox'**os** | кузня — кузнец                                    |
+| bad — bad**os**   | дерево — лесоруб                                  |
+| kas — kas**os**   | лес — лесничий                                    |
+| gac — gac**os**   | любовь — любовник (тот кто любит, тот кого любят) |
+| d'ok — d'ok**os** | еда — едок (тот, кто ест)                         |
 ### Учение (-un-)
+Область науки, научная дисциплина, предмет или направление, реже — направление искусства. Примеры:
+
+| Зэкерисский       | Русский                                                     |
+| :---------------- | :---------------------------------------------------------- |
+| hikt — hikt**un** | камень — минералология                                      |
+| ses — ses**un**   | цвет — теория цвета, цветология                             |
+| nurt — nurt**un** | здоровье — основы здоровья; учение о том, как быть здоровым |
+| dzin — dzin**un** | число — математика                                          |
+| j'on — j'on**un** | слух — аудиология                                           |
 ### Идеология (-ats-)
+Идеология — то, что зэкериссцы выбирают как свой смысл жизни. Обычно названия идеологий образуются от центральных объектов самой идеологии. Примеры:
+
+| Зэкерисский        | Русский                                                                                                 |
+| :----------------- | :------------------------------------------------------------------------------------------------------ |
+| bizl — bizl**ats** | информация, которую нужно сохранить — идеология о важности собирать и сохранять любую информацию        |
+| tek — tek**ats**   | знание — идеология о важности накапливать знания и открывать новые                                      |
+| karf — karf**ats** | готовка — идеология о важности приготовления блюд, в особенности вкусных                                |
+| nurt — nurt**ats** | здоровье — идеология о важности сохранения здоровья в идеальном состоянии                               |
+| gsot — gsot**ats** | сила (физическая) — идеология о важности иметь наибольшую физическую силу и всячески её демонстрировать |
 ### Цвет (-ses-)
+Цвет объекта. Имеется ввиду абстрактный цвет, который не всегда даже существует как цвет.
+
+| Зэкерисский         | Русский                  |
+| :------------------ | :----------------------- |
+| kolt — kolt"**ses** | свеча — цвет свечи       |
+| rav — rav**ses**    | нож — цвет ножа          |
+| kyot — kyot"**ses** | трава — цвет травы       |
+| noh — noh**ses**    | согласие — цвет согласия |
+| xid — xid**ses**    | медь — цвет меди         |
+Обратите внимание, что нельзя образовывать таким образом буквальные цвета (красный, зелёный, синий и т.д.). У буквальных цветов есть свои отдельные слова, которые нельзя расщепить на составляющие: fases (красень, краснота), rases (зелень).
+
+ses как словообразующий суффикс применим в художественном смысле. Например, иногда под цветом предмета подразумеваются все его свойства. Пример: loseo kuc**ses**a — он был цвета очень сильного гнева — он был в ярости.
 ### Параметр (-edz-)
+Любой теоретически измеримый параметр, связанный с изначальным существительным. Обычно существительные не могут быть измеримыми параметрами, если они не образованы с помощью суффикса edz. То есть, нельзя сказать высокая или низкая gsot (физ. сила). gsot в этом случае это само по себе явление, которое не может быть высоким, низким, сильным, слабым и так далее. Примеры:
+
+| Зэкерисский        | Русский                                                           |
+| :----------------- | :---------------------------------------------------------------- |
+| gsot — gsot**edz** | физ. сила (не измеримо) — степень физ. силы (измеримо)            |
+| fim — fim**edz**   | боль — болючесть (то как больно; то, сколько боли может принести) |
+| het — het**edz**   | поле — полестость (степень покрытия полями)                       |
+| kas — kas**edz**   | лес — лесистость                                                  |
 ### Отсутствие (-al-)
+Аналогично русской приставке без-. Отсутствие чего-либо не значит присутствие чего-то противоположного. Например, отсутствие правды это ещё не ложь. Это может быть контр интуитивно, но это касается всех слов с суффиксом -al-. Примеры:
+
+| Зэкерисский       | Русский                                           |
+| :---------------- | :------------------------------------------------ |
+| ac — ac**al**     | чувство — безчувство (чувство безэмоциональности) |
+| d'ok**al**        | еда — безъеда, отсутствие еды                     |
+| ronk — ronk**al** | дорога — бездорожье                               |
+| fabt — fabt**al** | работа — безработица, твоё отсутствие работы      |
+| ses — ses**al**   | цвет — безцвет, цвет отсутствия цвета             |
+
 # Причинноморфы
+
+Причинноморфы глаголов указывает на причину или цель действия. То есть отвечают на вопрос "почему это делать?". Причинноморфы применимы только к глаголам и к одному слову применима только одна причинноморфа.
+
+Причинноморфы охватывают не все возможные причины, а лишь несколько. Если ни одна из морфем в этом разделе не поможет передать цель или причину действия, вам может понадобится передача причинно-следственной связи через **siw**, или передача цели через **целевой падеж**.
 ### Простая (-oan-)
 ### Случайная (-ain-)
 ### Намеренная (-ien-)
