--- a/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
+++ b/Информация и особенности/Зэкерисский язык/Морфологическая энциклопедия.md
@@ -345,7 +345,7 @@ tags:
 | Зэкерисский       | Русский                                           |
 | :---------------- | :------------------------------------------------ |
 | nox' — nox'**os** | кузня — кузнец                                    |
-| bad — bad**os**   | дерево — лесоруб                                  |
+| bizl — bizl**os** | информация, которую нужно сохранить — шпион       |
 | kas — kas**os**   | лес — лесничий                                    |
 | gac — gac**os**   | любовь — любовник (тот кто любит, тот кого любят) |
 | d'ok — d'ok**os** | еда — едок (тот, кто ест)                         |
