--- a/Места/Города/Эренберг.md
+++ b/Места/Города/Эренберг.md
@@ -4,7 +4,8 @@ tags:
 ---
 Столица [Зэкериса](Зэкерис).
 ### Особенности
-Особенности
+Это город науки и исследовательский центр. Именно здесь наилучшее образование и качество жизни.
+Идеология города — текац (tekats), согласно которой важно накапливать знания и узнавать новое. Им важно накапливать не информацию, как теилтским шпионам, а именно знания — законы природы, закономерности, ответы на вопросы "почему" и "как".
 ### История
 История
 ### Структура власти
